feat: enhance appointment booking and user management functionality